--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^27.5.1",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "framer-motion": "^7.6.1",
     "gsap": "^3.11.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
